--- a/stylecatalog.css
+++ b/stylecatalog.css
@@ -7,7 +7,7 @@
 
 .header{
     height:100px;
-    width:1000px;
+    width:1300px;
     margin: 0 auto;
     background-color: #7f9680;
     border-radius: 30px;
@@ -39,6 +39,20 @@
 
 }
 
+.members {
+    position: relative;
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: #415d1e;
+    text-align: center;
+    width:100%;
+    font-family:  'Unbounded', cursive;
+    font-weight: 900;
+    font-stretch: ultra-expanded;
+}
+
 
 .frames {
     display: flex;
@@ -50,10 +64,10 @@
 width: 20%;
 margin: 10px;
 min-width: 250px;
-border-style: groove;
-border-width: 10px;
-border-color: #e3e618;
-padding: 20px;
+border-style: dotted;
+border-width: 5px;
+border-color: #415d1e;
+padding: 10px;
 }
 
 .frame img {
@@ -61,6 +75,15 @@ width: 100%;
 height: auto;
 }
 
-.p1, .p2 {
-color:#0839b4;
+
+.frame p {
+    font-size: 17px;
+    color: #415d1e;
+    text-align: center;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 700;
+    font-stretch: ultra-expanded;
+    background-color: #f8f8f5d2;
+    border-radius: 14px;
+    padding: 10px;
 }
