--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .composition {
 	position: relative;
  	width: 1900px;
- 	height: 4000px;
+ 	height: 3000px;
  	background: url("back.png");
 }
 
@@ -43,7 +43,7 @@
 
 .maintext {
     position: absolute;
-    top: 10%;
+    top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 180px;
@@ -57,7 +57,7 @@
 
 .motto-cont{
     position: absolute;
-    top: 28%;
+    top: 37%;
     left: 50%;
     transform: translate(-50%, -50%);
     height:300px;
@@ -86,7 +86,7 @@
 
 .members-cont{
     position: absolute;
-    top: 40%;
+    top: 54%;
     left: 50%;
     transform: translate(-50%, -50%);
     height:760px;
@@ -144,7 +144,7 @@
 
 .event-cont{
     position: absolute;
-    top: 55%;
+    top: 72%;
     background-color: #6f9272c0;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -168,7 +168,7 @@
 
 .eventlist{
     position: absolute;
-    top: 65%;
+    top: 85%;
     background-color: #d9d9d9b7;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -187,4 +187,37 @@
     font-family: 'Verdana', sans-serif;
     font-weight: 700;
     font-stretch: ultra-expanded;
+}
+
+.finish-cont{
+    position: absolute;
+    top: 99%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:100px;
+    width:100%;
+    background-color: #415d1e;
+}
+
+.finish {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 21px;
+    color: #d9d9d9;
+    margin-top: 15px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 300;
+    width:90%;
+    text-align: left;
+    margin-left: 20px;
+    font-stretch: ultra-expanded;
+}
+
+.socials{
+    position: absolute;
+    top: 50%;
+    width:90%;
+    text-align: right;
 }
