--- a/styleinform.css
+++ b/styleinform.css
@@ -1,7 +1,134 @@
 .composition {
 	position: relative;
  	width: 1920px;
- 	height: 3000px;
+ 	height: 1700px;
  	background: url("back.png");
 }
 
+.header{
+    height:100px;
+    width:1300px;
+    margin: 0 auto;
+    background-color: #7f9680;
+    border-radius: 30px;
+    border: 1px solid #7f9680;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+    
+
+    
+.links a{
+    font-size:30px;
+    font-weight:bold;
+    color: #f8f8f5;
+    text-decoration: none;
+    display: inline-block;
+    height:50px;
+    width:260px;
+}
+
+.chose{
+    height:49px;
+    width:2000px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+
+}
+
+.maintext-cont {
+    position: absolute;
+    top: 15%;
+    background-color: #6f9272c0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:220px;
+    width:100%;
+    text-align: center;
+}
+
+.maintext {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
+    color: #d9d9d9;
+    width:100%;
+    font-family:  'Unbounded', cursive;
+    font-weight: 700;
+    font-stretch: ultra-expanded;
+}
+
+.descr-cont{
+    position: absolute;
+    top: 59%;
+    background-color: #d9d9d9b7;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:1200px;
+    width:100%;
+    text-align: left;
+}
+
+.de {
+	position: absolute;
+    font-size: 30px;
+    color: #415d1e;
+    text-align: center;
+    margin-top: 20px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 100;
+    font-stretch: ultra-expanded;
+	width: 50%;
+}
+
+.descr-table{
+	width: 90%;
+}
+
+.descr-table2{
+	width: 90%;
+	position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.finish-cont{
+    position: absolute;
+    top: 98%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:100px;
+    width:100%;
+    background-color: #415d1e;
+}
+
+.finish {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 21px;
+    color: #d9d9d9;
+    margin-top: 15px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 300;
+    width:90%;
+    text-align: left;
+    margin-left: 20px;
+    font-stretch: ultra-expanded;
+}
+
+.socials{
+    position: absolute;
+    top: 50%;
+    width:90%;
+    text-align: right;
+}
