--- a/stylecontacts.css
+++ b/stylecontacts.css
@@ -109,6 +109,38 @@ height: auto;
     padding: 10px;
 }
 
+.finish-cont{
+    position: absolute;
+    top: 96%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:100px;
+    width:100%;
+    background-color: #415d1e;
+}
+
+.finish {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 21px;
+    color: #d9d9d9;
+    margin-top: 15px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 300;
+    width:90%;
+    text-align: left;
+    margin-left: 20px;
+    font-stretch: ultra-expanded;
+}
+
+.socials{
+    position: absolute;
+    top: 50%;
+    width:90%;
+    text-align: right;
+}
 .info {
     position: relative;
     top: 2%;
